force-app/main/default/objects/sc_lightning__SightCall_Session__c/sc_lightning__SightCall_Session__c.object-meta.xml
<CustomObject>
    <label>SightCall Session</label>
    <nameField>
        <label>SightCall Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SightCall Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>