force-app/main/default/objects/sc_lightning__SightCall_Session__c/fields/sc_lightning__call_start_date__c.field-meta.xml
<CustomField>
    <fullName>sc_lightning__call_start_date__c</fullName>
    <label>Call Start Date (UTC)</label>
    <type>DateTime</type>
</CustomField>