force-app/main/default/objects/sc_lightning__SightCall_Session__c/fields/sc_lightning__case__c.field-meta.xml
<CustomField>
    <fullName>sc_lightning__case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>SightCall Sessions</relationshipLabel>
    <relationshipName>SightCall_Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>