force-app/main/default/objects/sc_lightning__SightCall_Session__c/fields/sc_lightning__case_duration__c.field-meta.xml
<CustomField>
    <fullName>sc_lightning__case_duration__c</fullName>
    <label>Case Duration (Seconds)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>