force-app/main/default/objects/sc_lightning__SightCall_Session__c/fields/sc_lightning__case_end_reason__c.field-meta.xml
<CustomField>
    <fullName>sc_lightning__case_end_reason__c</fullName>
    <label>Case End Reason</label>
    <length>80</length>
    <type>Text</type>
</CustomField>