force-app/main/default/objects/sc_lightning__SightCall_Session__c/fields/sc_lightning__case_report_id__c.field-meta.xml
<CustomField>
    <fullName>sc_lightning__case_report_id__c</fullName>
    <label>Case Report Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>