force-app/main/default/objects/sc_lightning__SightCall_Session__c/fields/sc_lightning__use_case_name__c.field-meta.xml
<CustomField>
    <fullName>sc_lightning__use_case_name__c</fullName>
    <label>Use Case Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>